getBoard を作成
